<resources>
    <string name="app_name">Wages Calculator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="workingDaysInMonth">Working Days in Month</string>
    <string name="workingHours">Working hours per day</string>
    <string name="workingMinutes">Minutes if available</string>
    <string name="selectDaysInMonth">Select no. of days in Month</string>
    <string name="salaryPerDay">Salary per Month</string>
    <string name="enterPerDayWork">Enter per day work below :</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>

    <string-array name="months">
        <item>@string/selectDaysInMonth</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
        <item>"6"</item>
        <item>"7"</item>
        <item>"8"</item>
        <item>"9"</item>
        <item>"10"</item>
        <item>"11"</item>
        <item>"12"</item>
        <item>"13"</item>
        <item>"14"</item>
        <item>"15"</item>
        <item>"16"</item>
        <item>"17"</item>
        <item>"18"</item>
        <item>"19"</item>
        <item>"20"</item>
        <item>"21"</item>
        <item>"22"</item>
        <item>"23"</item>
        <item>"24"</item>
        <item>"25"</item>
        <item>"26"</item>
        <item>"27"</item>
        <item>"28"</item>
        <item>"29"</item>
        <item>"30"</item>
        <item>"31"</item>
        <item>"32"</item>
    </string-array>
</resources>
